Configure add item form; set up backend POST /items route to handle requests from form; successfully send form data from frontend to backend

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,3 +1,15 @@
 body {
-    background-color: lightblue;
+    background-color: rgb(235, 242, 245);
+}
+
+.sm-container {
+    width: 50%;
+}
+
+.center {
+    margin-inline: auto;
+}
+
+.margin-top-20 {
+    margin-top: 20px;
 }
