Redux/react-redux/redux-thunk installation and setup; create actions, constants, reducer for user, create store

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -25,6 +25,10 @@ body {
     margin-block: 10px;
 }
 
+.block-margin-lg {
+    margin-block: 50px;
+}
+
 .inline-margin-sm {
     margin-inline: 10px;
 }
